--- a/Coders-of-the-caribbean.vcxproj
+++ b/Coders-of-the-caribbean.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="first_step.c" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{32923B16-7D97-473A-8C8B-B0686AB096BC}</ProjectGuid>
     <RootNamespace>Codersofthecaribbean</RootNamespace>
@@ -109,9 +112,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\first_step.c" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
